--- a/docker/Dockerfile.focal
+++ b/docker/Dockerfile.focal
@@ -32,6 +32,14 @@ RUN apt-get install openssh-client git
 # download public key for github.com
 RUN mkdir -p -m 0600 ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts
 
+# Mitigate interactive prompt for choosing keyboard type
+COPY ./to_copy/keyboard /etc/default/keyboard
+# Copy configuration files
+COPY ./to_copy/aliases /root/.bash_aliases
+COPY ./to_copy/nanorc /root/.nanorc
+COPY ./to_copy/tmux /root/.tmux.conf
+COPY ./to_copy/ranger /root/.config/ranger/rc.conf
+
 # Install dependencies
 RUN apt-get update && apt-get install -q -y \
     ros-$ROS_DISTRO-octomap-ros \
@@ -48,7 +56,14 @@ RUN apt-get update && apt-get install -q -y \
     qtbase5-dev \
     libqt5opengl5-dev \
     python3-catkin-tools \
-    libdlib-dev
+    libdlib-dev \
+    python-is-python3 \
+    python3-pip python3-dev
+
+# Install toppra dependencies
+RUN python3 -m pip install --upgrade pip
+RUN python3 -m pip install --upgrade "numpy>=1.19.5,<1.27"
+RUN pip3 install toppra
 
 COPY to_copy/tmux $HOME/.tmux.conf
 # Clone and build larics_motion_planning
