--- a/scripts/startup/session.yml
+++ b/scripts/startup/session.yml
@@ -1,7 +1,7 @@
 name: exploration
 root: ./
 startup_window: roscore
-pre_window: export UAV_NAMESPACE=red
+pre_window: export UAV_NAMESPACE=minithex
 windows:
   - roscore:
       layout: tiled
@@ -12,7 +12,7 @@ windows:
       panes:
         - waitForRos; waitForOdometry; roslaunch uav_frontier_exploration_3d planner.launch
         - waitForRos; waitForOdometry; roslaunch uav_frontier_exploration_3d execute_trajectory.launch
-        - waitForRos; waitForOdometry; roslaunch uav_frontier_exploration_3d frontier_server.launch odometry:=/odometry config_filename:=$(rospack find uav_frontier_exploration_3d)/config/test_sim.yaml
+        - waitForRos; waitForOdometry; roslaunch uav_frontier_exploration_3d frontier_server.launch odometry:=/minithex/odometry config_filename:=$(rospack find uav_frontier_exploration_3d)/config/minithex_exploration_sim.yaml
         - "#waitForRos; waitForOdometry; rosservice call /$UAV_NAMESPACE/exploration/toggle \"data: true\""
         - "#rosservice call /$UAV_NAMESPACE/confirm_trajectory \"data: true\""
   - rviz:
