--- a/scripts/startup/session.yml
+++ b/scripts/startup/session.yml
@@ -12,7 +12,7 @@ windows:
       panes:
         - waitForRos; waitForOdometry; roslaunch uav_frontier_exploration_3d planner.launch
         - waitForRos; waitForOdometry; roslaunch uav_frontier_exploration_3d execute_trajectory.launch
-        - waitForRos; waitForOdometry; roslaunch uav_frontier_exploration_3d frontier_server.launch odometry:=/minithex/odometry config_filename:=$(rospack find uav_frontier_exploration_3d)/config/minithex_exploration_sim.yaml
+        - waitForRos; waitForOdometry; roslaunch uav_frontier_exploration_3d frontier_server.launch odometry:=/minithex/odometry cloud_in:=/lidar3d/points config_filename:=$(rospack find uav_frontier_exploration_3d)/config/minithex_exploration_sim.yaml
         - "#waitForRos; waitForOdometry; rosservice call /$UAV_NAMESPACE/exploration/toggle \"data: true\""
         - "#rosservice call /$UAV_NAMESPACE/confirm_trajectory \"data: true\""
   - rviz:
