--- a/docker/Dockerfile.focal
+++ b/docker/Dockerfile.focal
@@ -69,7 +69,7 @@ COPY to_copy/tmux $HOME/.tmux.conf
 # Clone and build larics_motion_planning
 WORKDIR $HOME/$CATKIN_WORKSPACE/src
 RUN --mount=type=ssh git clone git@github.com:larics/larics_motion_planning.git
-RUN --mount=type=ssh git clone git@github.com:larics/topp_ros.git
+RUN --mount=type=ssh git clone git@github.com:AnaBatinovic/topp_ros.git
 WORKDIR $HOME/$CATKIN_WORKSPACE/src/larics_motion_planning
 RUN git checkout exploration
 
