--- a/scripts/startup/session.yml
+++ b/scripts/startup/session.yml
@@ -7,6 +7,7 @@ windows:
       layout: tiled
       panes:
         - roscore
+        - rosrun uav_frontier_exploration_3d  minithex_odometry_to_tf.py
   - exploration:
       layout: tiled
       panes:
